<resources>
    <string name="app_name">StudyResearchApp</string>
    <string name="title_account">Research Guide</string>
    <string name="title_diary">Diary</string>
    <string name="title_ques">Questionnaire</string>
    <string name="activity_diary">Diary List</string>
    <string name="activity_account">User Info</string>
    <string name="activity_questionnaire">Questionnaire</string>
    <string name="account_unique_id">Account Unique ID</string>
    <string name="account_address">Account Email Address</string>
    <string name="account_user_name">User Name</string>
    <string name="account_start_date">Select Start Date: yyyy-mm-dd</string>
    <string name="account_end_date">Select End Date: yyyy-mm-dd</string>
    <string name="account_study_field">Required</string>
    <string name="account_confirm">Confirm</string>
    <string name="account_reset">Reset</string>
    <string name="select_study_field">Select Study Field:</string>
    <string name="unique_id_textView">Unique ID:</string>
    <string name="submit_questions">Submit Questionnaire</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="add_diary">Add Diary</string>
    <string name="upload_diary">Upload Diary</string>
    <string name="tell_us_about_your_today_s_diary">Tell us about your today\'s diary</string>
    <string name="date_diary_Detail">Date:</string>
    <string name="select_skill_diary">Select Skill ...</string>
    <string name="creat_diary">CREATE</string>
    <string name="diary_event">Diary event ...</string>
    <string name="diary_event_textview">Love is a variety of different emotional and mental states, typically strongly and positively experienced, that ranges from deepest interpersonal affection to simple pleasure. An example of this range of meanings is that the love of a mother differs from the love of a spouse differs from the love of food.</string>
    <string name="diary_event_date">Thu Aug 17 18:48:53 BST + 000001 2017</string>
    <string name="Skill">Consistently Skill</string>
</resources>
