<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5sp">

            <TextView
                android:id="@+id/diary_title"
                android:text="Love is forever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/diary_skill"
                    android:layout_width="125sp"
                    android:text="@string/Skill"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/diary_date"
                    android:layout_width="match_parent"
                    android:text="@string/diary_event_date"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <TextView
                android:id="@+id/diary_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diary_event_textview"
                android:padding="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>