<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenny.studyresearchapp.DiaryActivities">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/account_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:hint="@string/account_unique_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/account_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/account_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_id"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="46dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/account_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/account_user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_address"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="102dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/account_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/account_start_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_username"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="102dp" />

    <android.support.design.widget.TextInputEditText

        android:id="@+id/account_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/account_end_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_start_date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="102dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/account_study_text"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:hint="@string/account_study_field"
        tools:layout_editor_absoluteY="293dp"
        tools:layout_editor_absoluteX="191dp"
        app:layout_constraintTop_toTopOf="@+id/account_study_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/account_study_spinner"
        app:layout_constraintEnd_toStartOf="@+id/account_study_spinner"
        android:layout_marginEnd="6dp" />

    <Spinner
        android:id="@+id/account_study_spinner"
        android:layout_width="94dp"
        android:layout_height="42dp"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="293dp"
        android:layout_marginTop="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_address"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="176dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/colorAccent"
        app:itemTextColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:text="Select Study Field:"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="293dp"
        app:layout_constraintStart_toStartOf="@+id/account_end_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/account_study_text"
        android:layout_marginStart="3dp"
        app:layout_constraintEnd_toStartOf="@+id/account_study_text"
        android:layout_marginEnd="1dp" />

</android.support.constraint.ConstraintLayout>
