<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tell_us_about_your_today_s_diary"
        android:textSize="20sp"
        android:padding="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/diary_date_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:text="Thu Aug 17"
        android:gravity="center_horizontal"
        android:inputType="date"
        android:textSize="15sp"
        android:enabled="false"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="60dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        app:layout_constraintTop_toBottomOf="@id/textView_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/diary_spinner_skill"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:theme="@style/AlertDialog.AppCompat.Light"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="107dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toEndOf="@id/diary_text_skill"
        app:layout_constraintTop_toBottomOf="@id/diary_date_text"
        />

    <EditText
        android:id="@+id/diary_text_skill"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:enabled="false"
        android:hint="@string/select_skill_diary"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="105dp"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/diary_date_text"
        android:layout_marginStart="15sp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/diary_title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Title"
        android:inputType="textPersonName"
        android:maxLines="1"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diary_text_skill"
        />

    <EditText
        android:id="@+id/diary_event_detail"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:background="#0D000000"
        android:inputType="textMultiLine"
        android:hint="@string/diary_event"
        android:padding="5dp"
        android:gravity="top"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="194dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diary_title_detail"/>

    <Button
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/diary_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creat_diary"
        android:background="@color/colorgreen"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="458dp"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diary_event_detail"/>

</android.support.constraint.ConstraintLayout>
